# aura-wealth

./: .gitignore  CLAUDE.md  Dockerfile  aura-wealth-backlog.json  docker-compose.yml  lessons-learned.json
backend/: CLAUDE.md  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/data/: mock_data.py  seed.py
backend/app/models/: __init__.py  audit.py  bourse.py  common.py  dashboard.py  document.py  epargne.py  immobilier.py  patrimoine.py  private_equity.py  user.py
backend/app/routers/: audit.py  auth.py  bourse.py  dashboard.py  documents.py  epargne.py  immobilier.py  private_equity.py
backend/app/services/: extractors.py  patrimoine.py  qwen_agent.py  storage.py
frontend/: CLAUDE.md  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/ai/: AiContext.tsx  AiPanel.tsx  aiResponses.ts
frontend/src/components/auth/: LoginPage.tsx  RegisterPage.tsx  RequireRole.tsx
frontend/src/context/: AuthContext.tsx  NavigationContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/hooks/: useApiData.ts  useAuditLog.ts  useBourse.ts  useDashboard.ts  useDocuments.ts  useEpargne.ts  useImmobilier.ts  useMutation.ts  usePrivateEquity.ts
frontend/src/types/: audit.ts  bourse.ts  dashboard.ts  document.ts  epargne.ts  immobilier.ts  private-equity.ts  user.ts
frontend/src/utils/: format.ts
specs/: aura-maquette.html  aura-wealth-prd-v1.1.docx
(+63 files in other folders)
